feat : create species and adopt pet routes
